compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/caseInProperties.kt
// FIR_IDENTICAL

<!CONFLICTING_JVM_DECLARATIONS!>val aa = 1<!>
<!CONFLICTING_JVM_DECLARATIONS!>val Aa = 1<!>
